Skeleton code for simple server, handles part of the initial handshake.